Fixed stackable cards top margin, Fixed waterfall spacing, waterfall cards can now custom columns

--- a/src/partials/views/_card.sass
+++ b/src/partials/views/_card.sass
@@ -42,6 +42,7 @@
     border-radius   : $card_borderRadius
     box-shadow      : $card_boxShadow
     transition      : $card_transition
+    color           : $textColor
     
     +card-inverted-variant($card_textColor, $card_backgroundColor, $card_borderColor)
 
@@ -372,8 +373,8 @@
 
 +rwd-serious(mobile)
     .ts.stackable.cards:not(.waterfall)
-        display: block !important
-    .ts.stackable.cards:not(.waterfall) .card
+        //display: block !important
+    .ts.stackable.cards:not(.waterfall) .card:not(:first-child)
         margin-top: 0 !important
     .ts.stackable.cards:not(.waterfall) > .card
         display: block !important
@@ -561,12 +562,66 @@
 
 .ts.waterfall.cards
     display     : block
-    column-count: $card_waterfallColumnCount
     width       : 100%
+    margin-left : 0
+    margin-right: 0
     
 .ts.waterfall.cards > .card
-    display: inline-block
-    width  : 100%
+    display     : inline-block
+    width       : 100%
+    margin-left : 0
+    margin-right: 0
+    
+.ts.waterfall.cards.one
+    column-count     : 1
+    -moz-column-count: 1
+    -moz-column-gap  : calc(#{$card_waterfallOneCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallOneCardOffset} * 2)
+.ts.waterfall.cards.two
+    column-count     : 2
+    -moz-column-count: 2
+    -moz-column-gap  : calc(#{$card_waterfallTwoCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallTwoCardOffset} * 2)
+.ts.waterfall.cards.three
+    column-count     : 3
+    -moz-column-count: 3
+    -moz-column-gap  : calc(#{$card_waterfallThreeCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallThreeCardOffset} * 2)
+.ts.waterfall.cards.four
+    column-count     : 4
+    -moz-column-count: 4
+    -moz-column-gap  : calc(#{$card_waterfallFourCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallFourCardOffset} * 2)
+.ts.waterfall.cards.five
+    column-count     : 5
+    -moz-column-count: 5
+    -moz-column-gap  : calc(#{$card_waterfallFiveCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallFiveCardOffset} * 2)
+.ts.waterfall.cards.six
+    column-count     : 6
+    -moz-column-count: 6
+    -moz-column-gap  : calc(#{$card_waterfallSixCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallSixCardOffset} * 2)
+.ts.waterfall.cards.seven
+    column-count     : 7
+    -moz-column-count: 7
+    -moz-column-gap  : calc(#{$card_waterfallSevenCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallSevenCardOffset} * 2)
+.ts.waterfall.cards.eight
+    column-count     : 8
+    -moz-column-count: 8
+    -moz-column-gap  : calc(#{$card_waterfallEightCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallEightCardOffset} * 2)
+.ts.waterfall.cards.nine
+    column-count     : 9
+    -moz-column-count: 9
+    -moz-column-gap  : calc(#{$card_waterfallNineCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallNineCardOffset} * 2)
+.ts.waterfall.cards.ten
+    column-count     : 10
+    -moz-column-count: 10
+    -moz-column-gap  : calc(#{$card_waterfallTenCardOffset} * 2)
+    column-gap       : calc(#{$card_waterfallTenCardOffset} * 2)
 
 //-------------------//
 //       Symbol
